tests/ui/traits/non_lifetime_binders/drop-impl-pred.yes.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/drop-impl-pred.rs:5:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0282]: type annotations needed
  --> $DIR/drop-impl-pred.rs:16:18
   |
LL | impl<T> Drop for Bar<T>
   |                  ^^^^^^ cannot infer type for struct `Bar<T>`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0282`.
